[tool.poetry]
name = "software-supply-chain-security-assignment1"
version = "3.0.0"
description = ""
authors = ["JacksonQu <200074quhaoning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
pytest-cov = "^5.0.0"
requests = "^2.28.1"
mypy = "^1.13.0"
black = "^24.10.0"
ruff = "^0.7.0"
flake8 = "^7.1.1"
pylint = "^3.3.1"
autodocstrings = "^0.1.3"
bandit = "^1.7.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
